workx-rs/tui/src/chatwidget/snapshots/workx_tui__chatwidget__tests__external_model_picker_loading.snap
---
source: tui/src/chatwidget/tests/external_model_picker_tests.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Loading provider models

›    Fetching the current provider's model catalog…

  Press enter to confirm or esc to go back
