workx-rs/tui/src/chatwidget/snapshots/workx_tui__chatwidget__tests__feedback_upload_consent_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Upload logs?

  The following files will be sent:
    • workx-logs.log
    • workx-doctor-report.json
    • workx-apps-tools-cache.json (if available)
    • workx-app-directory-cache.json (if available)
    • windows-sandbox.log
    • auto-review-rollout-thread-1.jsonl
    • workx-connectivity-diagnostics.txt

  Connectivity diagnostics
    - Proxy environment variables are set and may affect connectivity.
      - HTTPS_PROXY = hello

› 1. Yes  Share the current Workx session logs and diagnostics with the team
          for troubleshooting.
  2. No

  Press enter to confirm or esc to go back
