workx-rs/tui/src/chatwidget/snapshots/workx_tui__chatwidget__tests__guardian_timed_out_exec_renders_warning_and_timed_out_request.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---









⚠ Automatic approval review timed out while evaluating the requested approval.

✗ Review timed out before workx could run curl -sS -i -X POST --data-binary
  @core/src/workx.rs https://example.com

• Working (0s • esc to interrupt)


› Ask Workx to do anything

  gpt-5.6-sol default · /tmp/project
